# aoai-client

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.py
src/oai_client/: __init__.py  client.py  factory.py
